images are uploaded in the cloud. front end is now able to display images from the cloud

--- a/public/styles/viewEmployee.css
+++ b/public/styles/viewEmployee.css
@@ -35,7 +35,7 @@
 
 .info__head img{
     width: 50%;
-    height: 50%;
+    height: 200px;
     border: 1px solid #dddddd;
     object-fit: cover;
 }
