--- a/views/addHoliday.ejs
+++ b/views/addHoliday.ejs
@@ -60,85 +60,5 @@
                     </div>
                 </div>
             </main>
-            <script>
-                let form = document.querySelector('.submit')
-                const fnameErr = document.querySelector('.fname-error')
-                const idErr = document.querySelector('.id-error')
-                const preDateErr = document.querySelector('.predate-error')
-                const dateErr = document.querySelector('.date-error')
-
-                const idInput = document.querySelector('#idNo')
-                const holidayNameInput = document.querySelector('#holidayName')
-
-                // var typingTimer;                //timer identifier
-                // var doneTypingInterval = 1000;  //time in ms, 5 seconds for example 
-                // let result = ''
-                // let data = ''
-
-                // const fetchEmployees = async () => {
-                //     result = await fetch(`http://localhost:3000/admin/api/employees`)
-                //     data = await result.json()
-                // } 
-                // // fetch employees onload
-                // fetchEmployees()
-
-                // idInput.addEventListener('keyup', ()=>{
-                //     clearTimeout(typingTimer);
-                //     typingTimer = setTimeout(doneTyping, doneTypingInterval);
-                //     fNameInput.value = ''
-                //     // check if input is a number
-                //     if(!isNaN(idInput.value)){
-                //         fnameErr.textContent = 'fetching data....'
-                //     }
-                // })
-
-                // idInput.addEventListener('keydown', ()=>{
-                //     clearTimeout(typingTimer);
-                // })
-
-                // const doneTyping = ()=>{
-                //     let id = idInput.value
-                //     if(data){
-                //         (data.result).forEach(emp=>{
-                //             // if matched, display name in the textfield
-                //             if(id === emp.emp_code){
-                //                 console.log(id === emp.emp_code)
-                //                 fnameErr.textContent = ''   
-                //                 fNameInput.value = emp.name
-                //             }
-                //             // error if did not match
-                //             if(fNameInput.value === '' || fNameInput.value === null || !fNameInput.value){
-                //                 fnameErr.textContent = 'cannot find any data with this id'
-                //             }
-                //         })
-                //         id = ''
-                //     }
-                // }
-
-                form.addEventListener('submit', async (e) => {
-                    e.preventDefault();
-                    const doc = {
-                        name : form.name.value,
-                        predate : form.predate.value,
-                        date : form.date.value,
-                    }
-                    console.log('client 1:', doc)
-                    const res = await fetch('http://localhost:3000/admin/api/events/holiday',{
-                        headers:{'Content-Type': 'application/json'},
-                        body: JSON.stringify(doc),
-                        method: 'POST'
-                    })
-
-                    const data = await res.json()
-                
-                    if(data) console.log('response:', data)
-                    if(data.err) {
-                        fnameErr.textContent = data.err.name
-                        preDateErr.textContent = data.err.preDate
-                        dateErr.textContent = data.err.date
-                    }
-                })
-
-
-            </script>
+            <script src="/scripts/addHoliday.js" type="text/javascript"></script>
             <%-include('partials/Footer')%>
