--- a/views/travelPass.ejs
+++ b/views/travelPass.ejs
@@ -152,6 +152,7 @@
 
     const doneTyping = async()=>{
         let id = idInput.value
+        console.log(id)
         if(!id){
             idErr.textContent = 'Input must not be empty'
         }
