--- a/views/viewEmployee.ejs
+++ b/views/viewEmployee.ejs
@@ -32,7 +32,7 @@
         <div class="info-left">
             <div class="info-left__sub">
                 <div class="info__head">
-                    <img src="/img/pfp2.jpg" alt="#">
+                    <img src="<%=data.result.personal_information.avatar.url%>" alt="#">
                     <h1><%=data.result.personal_information.name%></h1>
                 </div>
                 <div class="info__main">
