add a date function that will add 14 days to a current date

--- a/views/timeAttendance.ejs
+++ b/views/timeAttendance.ejs
@@ -19,31 +19,36 @@
         <div class="container main">
             <div class="imgContainer">
                 <div class="imgSubContainer">
-                    <img src="/img/coralbacknew1.png" class="img">
+                    <img src="/img/no-image.png" alt="PROFILE" class="img">
+                </div>
+                <div class="infoSubContainer ">
+                    <label for="" class="name" >NAME</label>
+                    <div class="name">
+                        <label for="" class="labelName">~</label>
+                    </div>
+        
+                    <label for="" class="id">ID</label>
+                    <div class="id">
+                        <label for="" class="labelId">~</label>
+                    </div>
+        
+                    <label for="" class="rfid">RFID</label>
+                    <div class="rfid">
+                        <label for="" class="labelName">~</label>
+                    </div>
                 </div>
             </div>
-            <div class="infoContainer">
-                <label for="" class="labelName">Name</label>
-                <div class="name">
-                    <label for="" class="labelName">BFAR EMS</label>
+            <div class="container idInput">
+                <div class="inputId">
+                    <input class="inputElId" type="text" name="empid" id="" placeholder="Enter your ID" onblur="this.focus()" autofocus autocomplete="off">
                 </div>
-                <label for="" class="labelName">Employee ID</label>
-                <div class="id">
-                    <label for="" class="labelId">BFAR EMS</label>
+                <button type="submit" class="subBtn">Punch</button>
+                <div class="message" >
+                    <label for="" class="labelMessage">BFAR EMS</label> 
                 </div>
-                
-            </div> 
-        </div>
-        <div class="container idInput">
-            <div class="inputId">
-                <input class="inputElId" type="text" name="empid" id="" placeholder="Enter your ID" onblur="this.focus()" autofocus autocomplete="off">
+                <label for="" class="timeType"></label>
+                <label for="" hidden class="inputType"></label>
             </div>
-            <button type="submit" class="subBtn">Punch</button>
-            <div class="message" >
-                <label for="" class="labelMessage">BFAR EMS</label> 
-            </div>
-            <label for="" class="timeType"></label>
-            <label for="" hidden class="inputType"></label>
         </div>
         </form>
         
