--- a/public/styles/timeAttendance.css
+++ b/public/styles/timeAttendance.css
@@ -64,7 +64,6 @@ main{
 /* background logo */
 .main{
     position: relative;
-    background-image: url('./../img/bfar-logo.png');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 150px;
@@ -108,23 +107,39 @@ div.timeDate{
 .container .imgContainer{
     padding: 2em 0 2em 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
+    justify-content: space-around;
+    gap: 1em;
 }
 
 .container .imgContainer .imgSubContainer{
     /* background-color: #FFFEFE; */
     background-color: rgba(255, 254, 254, 1);
     border: 1px solid #DDDDDD;  
-    width: 150px;
-    height: 150px;
+    width: 40%;
+    margin-left: 1em;
+}
+.container .imgContainer .infoSubContainer{
+    /* background-color: #FFFEFE; */
+    background-color: rgba(255, 254, 254, 1);
+    border: 1px solid #DDDDDD;  
+    width: 60%;
+    margin-right: 1em;
+    padding: 1em;
+}
+
+.container .imgContainer .infoSubContainer label{
+    /* background-color: #FFFEFE; */
+    font-weight: 600;
+}
+.container .imgContainer .infoSubContainer label.name, .container .imgContainer .infoSubContainer label.id, .container .imgContainer .infoSubContainer label.rfid{
+    /* background-color: #FFFEFE; */
+    font-size: 1.2rem;
 }
 .container .imgContainer .imgSubContainer img{
     /* background-color: #FFFEFE; */
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit:cover;
 }
 
 .container .infoContainer{
@@ -158,7 +173,6 @@ div.timeDate{
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-top: 1.25em;
 }
 
 
@@ -169,6 +183,7 @@ div.timeDate{
     background-color: #FFFEFE;
     text-align: center;
     padding: .5em 0 .5em 0;
+    margin-bottom: 1em;
 }
 
 .idInput div.message{
