--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -90,9 +90,25 @@
                   </div>
                 </div>
               </div>
-            <input type="date" name="from" value="<%=query.from%>" id="" class="rounded-1">
-            <input type="date" name="to" value="<%=query.to%>" id="" class="rounded-1"    >
-            
+            <input type="date" name="from" value="<%=query.from%>" id="from" class="rounded-1">
+            <input type="date" name="to" value="<%=query.to%>" id="to" class="rounded-1"    >
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+            <script> 
+                const from = document.querySelector('input[type="date"]#from') 
+                const to = document.querySelector('input[type="date"]#to') 
+
+               
+
+                from.addEventListener("change", function () {
+                    console.log(from.value)
+                    //add 15 more days  
+                    var newToDate = moment(from.value).add('days', 14).format('YYYY-MM-DD') ;
+
+                    console.log('change')
+                    to.value = newToDate
+                });
+
+            </script>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
