--- a/views/Payslip.ejs
+++ b/views/Payslip.ejs
@@ -22,29 +22,29 @@
                                     <label for="">Sample Name Joson</label>
                                 </div>
                                 <div class="col">
-                                    <label for="">Employee</label>
+                                    <label for="">Payroll Type</label>
+                                    <label for="">Semi-Monthly</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <label for="">Designation</label>
+                                    <label for="">Sample Name Joson</label>
+                                </div>
+                                <div class="col">
+                                    <label for="">Payroll Month</label>
                                     <label for="">Sample Name Joson</label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <label for="">Employee</label>
-                                    <label for="">Sample Name Joson</label>
+                                    <label for=""></label>
+                                    <label for=""></label>
                                 </div>
                                 <div class="col">
-                                    <label for="">Employee</label>
-                                    <label for="">Sample Name Joson</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <label for="">Employee</label>
-                                    <label for="">Sample Name Joson</label>
-                                </div>
-                                <div class="col">
-                                    <label for="">Employee</label>
-                                    <label for="">Sample Name Joson</label>
-                                </div>
+                                    <label for="">Basic Salary</label>
+                                    <label for="">21000</label>
+                                </div>  
                             </div>
                         </div>
                         <div class="d-flex overflow-auto  table-container"> 
@@ -161,6 +161,7 @@
                                         <label for="">Gross Salary</label>
                                     </td>
                                     <td>
+                                        <label for=""></label>
                                         <label for="">10000</label>
                                     </td>
                                 </tr>
