--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -23,12 +23,12 @@
       </li>
       <li>
         <a href="/admin/attendance" class="nav-link <%=(url.toLowerCase().includes('/attendance'))?'active':''%>">
-          Attendance Report
+          Attendance 
         </a>
       </li>
       <li class="nav-item">
         <a href="/admin/payroll" class="nav-link <%=(url.toLowerCase().includes('/payroll'))?'active':''%>" aria-current="page">
-          Payroll Report
+          Payroll
         </a>
       </li>
       <hr>
